Add new features and updates for menu items and restaurant management